<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/scanner"
        android:icon="@drawable/baseline_qr_code_black_24dp"
        android:title="@string/scanner"
        android:contentDescription="@string/scanner_qrcode"
        app:showAsAction="always" />
    <item
        android:id="@+id/addItem"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_machine_image"
        android:contentDescription="@string/adding_some_machine_image"
        app:showAsAction="always"/>
    <item
        android:id="@+id/editItem"
        android:title="Edit Machine"
        android:contentDescription="Edit Machine Image From Apps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/deleteItem"
        android:title="Delete Machine"
        android:contentDescription="Delete Machine Image From Apps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortByName"
        android:title="@string/sort_by_name"
        android:contentDescription="@string/sort_machine_image_item_by_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortByType"
        android:title="@string/sort_by_type"
        android:contentDescription="Sort Machine Image Item By Type"
        app:showAsAction="never"/>
</menu>